--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^5.0",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
@@ -16,8 +17,12 @@
         "symfony/yaml": "*"
     },
     "require-dev": {
+        "easycorp/easy-log-handler": "^1.0.7",
+        "symfony/debug-bundle": "^3.3|^4.0",
         "symfony/dotenv": "*",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/var-dumper": "^3.3|^4.0"
     },
     "config": {
         "preferred-install": {
